--- a/about.html
+++ b/about.html
@@ -179,7 +179,7 @@
           </div>
           <div  class = "col-lg-4 order-1 order-lg-2" data-aos="fade-up" data-aos-delay="200">
               <p>
-                  <h5 style = "font-size: 22px;"><b> <a href="https://www.linkedin.com/in/dr-jabasheela-l-14097621/">Dr. L. Jaba Sheela, M.E. Ph.D.</a></b></h5> 
+                  <h5 style = "font-size: 22px;"><b> <a target="_blank" href="https://www.linkedin.com/in/dr-jabasheela-l-14097621/">Dr. L. Jaba Sheela, M.E. Ph.D.</a></b></h5> 
                   <span style = "font-weight: 600;">Head of the Department</span><br>
                   <span>Department of CSE</span><br>
                   <span>Panimalar Engineering College</span>
@@ -204,7 +204,7 @@
           </div>
           <div  class = "col-lg-4 order-1 order-lg-2"  data-aos="fade-up" data-aos-delay="200">
               <p>
-                  <h5 style = "font-size: 22px;"><b> <a href="https://www.linkedin.com/in/madhavakumar-dhandapani">Madhavakumar D</a></b></h5> 
+                  <h5 style = "font-size: 22px;"><b> <a target="_blank" href="https://www.linkedin.com/in/madhavakumar-dhandapani">Madhavakumar D</a></b></h5> 
                   <span style = "font-weight: 600;">Student [III CSE D] | Lead</span><br>
                   <span>Department of CSE</span><br>
                   <span>Panimalar Engineering College</span>
@@ -215,7 +215,7 @@
           </div>
           <div  class = "col-lg-4 order-1 order-lg-2"  data-aos="fade-up" data-aos-delay="200">
               <p>
-                  <h5 style = "font-size: 22px;"><b> <a href="https://www.linkedin.com/in/rishab-h-656b97224">Rishab</a></b></h5> 
+                  <h5 style = "font-size: 22px;"><b> <a target="_blank" href="https://www.linkedin.com/in/rishab-h-656b97224">Rishab H</a></b></h5> 
                   <span style = "font-weight: 600;">Student [III CSE D] | Co Lead</span><br>
                   <span>Department of CSE</span><br>
                   <span>Panimalar Engineering College</span>
@@ -232,7 +232,7 @@
         </div>
         <div  class = "col-lg-4 order-1 order-lg-2"  data-aos="fade-up" data-aos-delay="200">
             <p>
-                <h5 style = "font-size: 22px;"><b> <a href="https://www.linkedin.com/in/karthick-vasudevan-062761232">Karthick V</a></b></h5> 
+                <h5 style = "font-size: 22px;"><b> <a target="_blank" href="https://www.linkedin.com/in/karthick-vasudevan-062761232">Karthick V</a></b></h5> 
                 <span style = "font-weight: 600;">Student [III CSE D] | Co Lead</span><br>
                 <span>Department of CSE</span><br>
                 <span>Panimalar Engineering College</span>
@@ -243,7 +243,7 @@
         </div>
         <div  class = "col-lg-4 order-1 order-lg-2"  data-aos="fade-up" data-aos-delay="200">
             <p>
-                <h5 style = "font-size: 22px;"><b> <a href="https://www.linkedin.com/in/jeswinjosephj">Jeswin Joseph J</a></b></h5> 
+                <h5 style = "font-size: 22px;"><b> <a target="_blank" href="https://www.linkedin.com/in/jeswinjosephj">Jeswin Joseph J</a></b></h5> 
                 <span style = "font-weight: 600;">Student [III CSE D] | Co Lead</span><br>
                 <span>Department of CSE</span><br>
                 <span>Panimalar Engineering College</span>
@@ -277,7 +277,7 @@
                 Varadharajapuram, Poonamallee <br>
                 Chennai - 600 123 <br><br>
                 <i class="bi bi-telephone" style = "color : #ffc451 ;"></i> &nbsp; <span style = "font-family : 'Consolas' ;">+91 93846 78960</span><br>
-                <i class="bi bi-envelope" style = "color : #ffc451 ;"></i> &nbsp; <span style = "font-family : 'Consolas' ;"><a href="mailto:coders_forum@outlook.com">coders_forum@outlook.com</a></span><br>
+                <i class="bi bi-envelope" style = "color : #ffc451 ;"></i> &nbsp; <span style = "font-family : 'Consolas' ;"><a target="_blank" href="mailto:coders_forum@outlook.com">coders_forum@outlook.com</a></span><br>
               </p>
               <div class="social-links mt-3">
                 <a href="https://www.linkedin.com/company/coders-forum" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
