--- a/gallery.html
+++ b/gallery.html
@@ -367,7 +367,7 @@
                 Varadharajapuram, Poonamallee <br>
                 Chennai - 600 123 <br><br>
                 <i class="bi bi-telephone" style = "color : #ffc451 ;"></i> &nbsp; <span style = "font-family : 'Consolas' ;">+91 93846 78960</span><br>
-                <i class="bi bi-envelope" style = "color : #ffc451 ;"></i> &nbsp; <span style = "font-family : 'Consolas' ;"><a href="mailto:coders_forum@outlook.com">coders_forum@outlook.com</a></span><br>
+                <i class="bi bi-envelope" style = "color : #ffc451 ;"></i> &nbsp; <span style = "font-family : 'Consolas' ;"><a target="_blank" href="mailto:coders_forum@outlook.com">coders_forum@outlook.com</a></span><br>
               </p>
               <div class="social-links mt-3">
                 <a href="https://www.linkedin.com/company/coders-forum" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
