Added Time measuring Logs

--- a/about.html
+++ b/about.html
@@ -3,6 +3,9 @@
 
 <head>
 
+  <script>console.log("MADLOG-N:", Date.now());</script>
+
+
   <title>Coders Forum | About Us</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -14,12 +17,18 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta name="language" content="English">
 
+  <script>console.log("MADLOG-O:", Date.now());</script>
+
+
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://codersforum.netlify.app" />
   <meta property="og:title" content="Coders Forum | Panimalar" />
   <meta property="og:description" content="Coders Forum is a growing network of student developers and programmers in Chennai." />
   <meta property="og:image" content="https://codersforum.netlify.app/assets/img/team/cf-og.jpg" />
+
+  <script>console.log("MADLOG-P:", Date.now());</script>
+
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image" />
@@ -28,19 +37,38 @@
   <meta property="twitter:description" content="Coders Forum is a growing network of student developers and programmers in Chennai." />
   <meta property="twitter:image" content="https://codersforum.netlify.app/assets/img/team/cf-og.jpg" />
 
+  <script>console.log("MADLOG-Q:", Date.now());</script>
+
+
   <link href="assets/img/club-logo.ico" rel="icon">
+  <script>console.log("MADLOG-Q.1:", Date.now());</script>
 
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
+  <script>console.log("MADLOG-R:", Date.now());</script>
+
+
   <link href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" rel="stylesheet">
+  <script>console.log("MADLOG-R.1:", Date.now());</script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script>console.log("MADLOG-R.2:", Date.now());</script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" rel="stylesheet">
+  <script>console.log("MADLOG-R.3:", Date.now());</script>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/boxicons/2.1.0/css/boxicons.min.css" rel="stylesheet">
+  <script>console.log("MADLOG-R.4:", Date.now());</script>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/glightbox/3.2.0/css/glightbox.min.css" rel="stylesheet">
+  <script>console.log("MADLOG-R.5:", Date.now());</script>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.0.1/remixicon.css" rel="stylesheet">
+  <script>console.log("MADLOG-R.6:", Date.now());</script>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/11.0.5/swiper-bundle.min.css" rel="stylesheet">
 
+  <script>console.log("MADLOG-S:", Date.now());</script>
+
+
   <link href="assets/css/style.css" rel="stylesheet">
+
+  <script>console.log("MADLOG-T:", Date.now());</script>
+
 
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-3M7SMRS80F"></script>
@@ -52,9 +80,22 @@
     gtag('config', 'G-3M7SMRS80F');
   </script>
 
+  <script>console.log("MADLOG-U:", Date.now());</script>
+
+
 </head>
 
+  <script>console.log("MADLOG-V:", Date.now());</script>
+  <script>console.log("MADLOG-W:", Date.now());</script>
+  <script>console.log("MADLOG-X:", Date.now());</script>
+  <script>console.log("MADLOG-Y:", Date.now());</script>
+  <script>console.log("MADLOG-Z:", Date.now());</script>
+
+
+
 <body>
+
+  <script>console.log("MADLOG-A:", Date.now());</script>
 
   <!-- ======= Header ======= -->
   <header id="header" class="fixed-top ">
@@ -80,6 +121,9 @@
 
   </header><!-- End Header -->
 
+  <script>console.log("MADLOG-B:", Date.now());</script>
+
+
   <main id="main">
 
     <!-- ======= Hero Section ======= -->
@@ -94,6 +138,9 @@
       </div>
       </div>
     </section>
+
+  <script>console.log("MADLOG-C:", Date.now());</script>
+
 
 
     <section class="inner-page">
@@ -126,6 +173,9 @@
       </p>
     </div>
 
+  <script>console.log("MADLOG-D:", Date.now());</script>
+
+
     <div class="container" data-aos="fade-up" >
       <div class="section-title">
           <p>Core Tenets</p> 
@@ -152,6 +202,9 @@
           <br>
       </p>
   </div>
+
+  <script>console.log("MADLOG-E:", Date.now());</script>
+
 
     <div class="container" data-aos="fade-up" >
         
@@ -192,6 +245,9 @@
   
     </div>
     </section>
+
+  <script>console.log("MADLOG-F:", Date.now());</script>
+
 
     <section>
       <div class="container">
@@ -263,6 +319,9 @@
       </div>
     </section>
 
+  <script>console.log("MADLOG-G:", Date.now());</script>
+
+
 
     <section>
       <div class="container">
@@ -312,6 +371,9 @@
       </div>
     </section>
 
+  <script>console.log("MADLOG-H:", Date.now());</script>
+
+
     <section>
       <div class="container">
         <div class="section-title">
@@ -344,6 +406,9 @@
 
   </main><!-- End #main -->
 
+  <script>console.log("MADLOG-I:", Date.now());</script>
+
+
   <!-- ======= Footer ======= -->
   <footer id="footer">
     <div class="footer-top">
@@ -369,6 +434,9 @@
               </div>
           </div>
         </div>
+
+  <script>console.log("MADLOG-J:", Date.now());</script>
+
 
         <div class="col-lg-4 col-md-6" style = "display : flex ; align-items : center ; justify-content : center ;">
           <img src="./assets/img/club-logo.png" style = "width : 300px; height : auto ;">
@@ -429,6 +497,9 @@
   </div>
 </footer>
 
+  <script>console.log("MADLOG-K:", Date.now());</script>
+
+
   <div id="preloader"></div>
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
@@ -443,7 +514,13 @@
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
+  <script>console.log("MADLOG-L:", Date.now());</script>
+
+
   <script src="assets/js/main.js"></script>
+
+  <script>console.log("MADLOG-M:", Date.now());</script>
+
 
 </body>
 
