our team updated with leads_3.0

--- a/about.html
+++ b/about.html
@@ -534,75 +534,157 @@
   <script>console.log("MADLOG-F:", Date.now());</script>
 
 
-    <section>
-      <div class="container">
-        <div class="section-title">
-          <p>Our Team</p> 
-          <h2>Leading the Vision</h2>
-        </div>
+<section>
+  <div class="container">
+    <div class="section-title">
+      <p>Our Team</p>
+      <h2>Leading the Vision</h2>
+    </div>
 
-        <div class="row justify-content-center d-flex align-items-center justify-content-center">
-          <div class="col-lg-4 col-md-4 col-sm-6">
-            <a href="https://www.linkedin.com/in/mohamed-jasim-b57802259/" target="_blank">
-              <div class="team-card" id="jasim">
-                  <img src="./assets/img/team/jasim.jpg" alt="Team Member" class="img-fluid">
-                  <h4 class="mt-3">Mohamed Jasim M</h4>
-                  <p class="text-muted"><b>Lead | CodeMaster</b></p>
-              </div>
-            </a>
-          </div>  
-          <div class="col-lg-4 col-md-4 col-sm-6">
-            <a href="https://www.linkedin.com/in/johithraj/" target="_blank">
-              <div class="team-card" id="johith">
-                  <img src="./assets/img/team/johith.jpg" alt="Team Member" class="img-fluid">
-                  <h4 class="mt-3">Johith Raj S S</h4>
-                  <p class="text-muted"><b>Co-Lead | CodeScribe</b></p>
-              </div>
-            </a>
-          </div>
-          <div class="col-lg-4 col-md-4 col-sm-6">
-            <a href="https://www.linkedin.com/in/emmanuel-prithish/" target="_blank">
-              <div class="team-card" id="prithish">
-                  <img src="./assets/img/team/prithish.jpg" alt="Team Member" class="img-fluid">
-                  <h4 class="mt-3">Emmanuel Prithish S</h4>
-                  <p class="text-muted"><b>Co-Lead | WebGuardian</b></p>
-              </div>
-            </a>
-          </div>
-        </div>
+    <!-- current leads (visible by default) -->
+    <div class="row justify-content-center">
 
-        <div class="row mt-5">
-          <div class="col-lg-4 col-md-4 col-sm-6">
-            <a href="https://www.linkedin.com/in/madhumitha-velusamy-80a209254/" target="_blank">
-              <div class="team-card" id="madhumitha">
-                  <img src="./assets/img/team/madhumitha.jpg" alt="Team Member" class="img-fluid">
-                  <h4 class="mt-3">Madhumitha V</h4>
-                  <p class="text-muted"><b>Co-Lead | PixelCrafter</b></p>
-              </div>
-            </a>
-          </div>  
-          <div class="col-lg-4 col-md-4 col-sm-6">
-            <a href="https://www.linkedin.com/in/shruti0405/" target="_blank">
-              <div class="team-card" id="shruti">
-                  <img src="./assets/img/team/shruti.jpg" alt="Team Member" class="img-fluid">
-                  <h4 class="mt-3">Shruti S</h4>
-                  <p class="text-muted"><b>Co-Lead | CommunityBridge</b></p>
-              </div>
-            </a>
+      <div class="col-lg-3 col-md-4 col-sm-6">
+        <a href="https://www.linkedin.com/in/avinash2608/" target="_blank">
+          <div class="team-card" id="avinash">
+            <img src="./assets/img/team/avinash.png" class="img-fluid" alt="Team Member">
+            <h4 class="mt-3">Avinash M</h4>
+            <p class="text-muted"><b>Lead | Code Custodian</b></p>
           </div>
-          <div class="col-lg-4 col-md-4 col-sm-6">
-            <a href="https://www.linkedin.com/in/aalia-fathima-a46b462a2/" target="_blank">
-              <div class="team-card"  id="aalia">
-                  <img src="./assets/img/team/aalia.jpg" alt="Team Member" class="img-fluid">
-                  <h4 class="mt-3">Aalia Fathima W</h4>
-                  <p class="text-muted"><b>Co-Lead | Operations Sentinel</b></p>
-              </div>
-            </a>
-          </div>
-        </div>
-
+        </a>
       </div>
-    </section>
+
+      <div class="col-lg-3 col-md-4 col-sm-6">
+        <a href="https://www.linkedin.com/in/bala-pramithran-r-0320b1295/" target="_blank">
+          <div class="team-card" id="bala">
+            <img src="./assets/img/team/bala.png" class="img-fluid" alt="Team Member">
+            <h4 class="mt-3">Bala Pramithran R</h4>
+            <p class="text-muted"><b>Lead |Outreach Strategist</b></p>
+          </div>
+        </a>
+      </div>
+
+      <div class="col-lg-3 col-md-4 col-sm-6">
+        <a href="https://www.linkedin.com/in/erlinar04/" target="_blank">
+          <div class="team-card" id="erlina">
+            <img src="./assets/img/team/erlina.png" class="img-fluid" alt="Team Member">
+            <h4 class="mt-3">Erlina R</h4>
+            <p class="text-muted"><b>Lead | Web Architect</b></p>
+          </div>
+        </a>
+      </div>
+
+      <div class="col-lg-3 col-md-4 col-sm-6">
+        <a href="https://www.linkedin.com/in/uvashree-s-607910300/" target="_blank">
+          <div class="team-card" id="uva">
+            <img src="./assets/img/team/uvashree.png" class="img-fluid" alt="Team Member">
+            <h4 class="mt-3">Uvashree S</h4>
+            <p class="text-muted"><b>Lead |Community Steward</b></p>
+          </div>
+        </a>
+      </div>
+
+    </div>
+
+    <!-- eye toggle -->
+    <div class="text-center mt-4">
+      <span
+        class="show-more-toggle"
+        data-bs-toggle="collapse"
+        data-bs-target="#previousLeads"
+        aria-expanded="false">
+        <span class="eye-icon">👁️</span>
+        <span class="toggle-text">show more</span>
+      </span>
+    </div>
+
+    <!-- previous leads (hidden by default) -->
+    <div id="previousLeads" class="collapse mt-5">
+      <div class="row justify-content-center g-4">
+
+        <div class="col-lg-4 col-md-4 col-sm-6">
+          <a href="https://www.linkedin.com/in/mohamed-jasim-b57802259/" target="_blank">
+            <div class="team-card" id="jasim">
+              <img src="./assets/img/team/jasim.jpg" class="img-fluid" alt="Team Member">
+              <h4 class="mt-3">Mohamed Jasim M</h4>
+              <p class="text-muted"><b>Former Lead | CodeMaster</b></p>
+            </div>
+          </a>
+        </div>
+
+        <div class="col-lg-4 col-md-4 col-sm-6">
+          <a href="https://www.linkedin.com/in/madhumitha-velusamy-80a209254/" target="_blank">
+            <div class="team-card" id="madhumitha">
+              <img src="./assets/img/team/madhumitha.jpg" class="img-fluid" alt="Team Member">
+              <h4 class="mt-3">Madhumitha V</h4>
+              <p class="text-muted"><b>Former Co-Lead | PixelCrafter</b></p>
+            </div>
+          </a>
+        </div>
+
+        <div class="col-lg-4 col-md-4 col-sm-6">
+          <a href="https://www.linkedin.com/in/emmanuel-prithish/" target="_blank">
+            <div class="team-card" id="prithish">
+              <img src="./assets/img/team/prithish.jpg" class="img-fluid" alt="Team Member">
+              <h4 class="mt-3">Emmanuel Prithish S</h4>
+              <p class="text-muted"><b>Former Co-Lead | WebGuardian</b></p>
+            </div>
+          </a>
+        </div>
+
+        <div class="col-lg-4 col-md-4 col-sm-6">
+          <a href="https://www.linkedin.com/in/shruti-s0405/" target="_blank">
+            <div class="team-card" id="shruti">
+              <img src="./assets/img/team/shruti.jpg" class="img-fluid" alt="Team Member">
+              <h4 class="mt-3">Shruti S</h4>
+              <p class="text-muted"><b>Former Co-Lead | CommunityBridge</b></p>
+            </div>
+          </a>
+        </div>
+
+        <div class="col-lg-4 col-md-4 col-sm-6">
+          <a href="https://www.linkedin.com/in/johithraj/" target="_blank">
+            <div class="team-card" id="johith">
+              <img src="./assets/img/team/johith.jpg" class="img-fluid" alt="Team Member">
+              <h4 class="mt-3">Johith Raj S S</h4>
+              <p class="text-muted"><b>Former Co-Lead | CodeScribe</b></p>
+            </div>
+          </a>
+        </div>
+
+        
+
+        <div class="col-lg-4 col-md-4 col-sm-6">
+          <a href="https://www.linkedin.com/in/aalia-f-a46b462a2/" target="_blank">
+            <div class="team-card" id="aalia">
+              <img src="./assets/img/team/aalia.jpg" class="img-fluid" alt="Team Member">
+              <h4 class="mt-3">Aalia Fathima W</h4>
+              <p class="text-muted"><b>FormerCo-Lead | Operations Sentinel</b></p>
+            </div>
+          </a>
+        </div>
+
+        <!-- remaining previous leads -->
+      </div>
+    </div>
+
+  </div>
+</section>
+<script>
+  const toggle = document.querySelector(".show-more-toggle");
+  const text = toggle.querySelector(".toggle-text");
+  const section = document.getElementById("previousLeads");
+
+  section.addEventListener("shown.bs.collapse", () => {
+    text.textContent = "show less";
+  });
+
+  section.addEventListener("hidden.bs.collapse", () => {
+    text.textContent = "show more";
+  });
+</script>
+
+
 
   <script>console.log("MADLOG-G:", Date.now());</script>
 
