--- a/about.html
+++ b/about.html
@@ -549,7 +549,7 @@
           <div class="team-card" id="avinash">
             <img src="./assets/img/team/avinash.png" class="img-fluid" alt="Team Member">
             <h4 class="mt-3">Avinash M</h4>
-            <p class="text-muted"><b>Lead | Code Custodian</b></p>
+            <p class="text-muted"><b>Lead | Coding Custodian</b></p>
           </div>
         </a>
       </div>
@@ -559,7 +559,7 @@
           <div class="team-card" id="bala">
             <img src="./assets/img/team/bala.png" class="img-fluid" alt="Team Member">
             <h4 class="mt-3">Bala Pramithran R</h4>
-            <p class="text-muted"><b>Lead |Outreach Strategist</b></p>
+            <p class="text-muted"><b>Lead | Outreach Strategist</b></p>
           </div>
         </a>
       </div>
@@ -579,7 +579,7 @@
           <div class="team-card" id="uva">
             <img src="./assets/img/team/uvashree.png" class="img-fluid" alt="Team Member">
             <h4 class="mt-3">Uvashree S</h4>
-            <p class="text-muted"><b>Lead |Community Steward</b></p>
+            <p class="text-muted"><b>Lead | Community Steward</b></p>
           </div>
         </a>
       </div>
@@ -588,6 +588,7 @@
 
     <!-- eye toggle -->
     <div class="text-center mt-4">
+      <br>
       <span
         class="show-more-toggle"
         data-bs-toggle="collapse"
@@ -659,7 +660,7 @@
             <div class="team-card" id="aalia">
               <img src="./assets/img/team/aalia.jpg" class="img-fluid" alt="Team Member">
               <h4 class="mt-3">Aalia Fathima W</h4>
-              <p class="text-muted"><b>FormerCo-Lead | Operations Sentinel</b></p>
+              <p class="text-muted"><b>Former Co-Lead | Operations Sentinel</b></p>
             </div>
           </a>
         </div>
