--- a/about.html
+++ b/about.html
@@ -316,7 +316,7 @@
   <link href="assets/img/club-logo.ico" rel="icon">
   <script>console.log("MADLOG-Q.1:", Date.now());</script>
 
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+  <!-- <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet"> -->
 
   <script>console.log("MADLOG-R:", Date.now());</script>
 
