--- a/gallery.html
+++ b/gallery.html
@@ -49,10 +49,10 @@
 
     <link href="assets/img/club-logo.ico" rel="icon" />
 
-    <link
+    <!-- <link
       href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
       rel="stylesheet"
-    />
+    /> -->
 
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css"
