--- a/gallery.html
+++ b/gallery.html
@@ -167,8 +167,7 @@
             <div class="col-lg-12 d-flex justify-content-center">
               <ul id="portfolio-flters">
                 <li data-filter="*" class="filter-active">All Images</li>
-                <li data-filter=".filter-app">Important</li>
-                <li data-filter=".filter-card">Events</li>
+                <li data-filter=".filter-highlight">Highlights</li>
               </ul>
             </div>
           </div>
