Interview prep alignment changes

--- a/Inter_Prep.html
+++ b/Inter_Prep.html
@@ -436,6 +436,21 @@
     color: gold;
   }
 
+  @media (max-width: 768px) {
+  #hero h1 {
+    font-size: 40px;
+    line-height: 1.3;
+    }
+  }
+
+  @media (max-width: 480px) {
+  #hero h1 {
+    font-size: 32px;
+    line-height: 1.3;
+    }
+  }
+
+
 
   </style>
 </head>
@@ -473,7 +488,7 @@
         <div class="row justify-content-center" data-aos="fade-up" data-aos-delay="150">
           <div class="col-xl-10 col-lg-10">
             <h1 style="font-size: 60px;" style="color: #fff;">INTERVIEW PREPARATION</h1>
-            <br>
+            
             <h3 ><span style="font-weight: bolder;">" </span>The way to get started is to quit talking and begin doing <span style="font-weight: bolder">"</span></h3>
           </div>
         </div>
